# HaliverUnittests

./: CMakeLists.txt  README.md  lemma_test.c  style.xsl
.github/workflows/: do_specific_test.yml  do_tests.yml  get_halide.yml  get_vercors.yml
OldIdeas/: no_bounds-0.vpr  simplified_unroll-0.txt  simplified_unroll.pvl  split_if_simple.pvl  test-0.vpr  test.pvl  test.z3  test_pred-0.vpr  test_pred.c  test_red-0.vpr  test_red.pvl
Predicates/: compute_half_PRED2-0.vpr
debug_tests/compute_half/: compute_half_mem-0.vpr  compute_half_mem.c  prove_pred_conv-0.vpr  prove_pred_conv.c
experiments/: run_experiments.py  unit_tests.txt  xml_to_latex.py
experiments/results/: exp-mem.tex  exp.tex  padre.tex
tests/alg/: input_buffer.cpp  multidim.cpp  pure_func.cpp  reduction.cpp  reduction_multi.cpp  reduction_multi_fail.cpp  reduction_where.cpp  tuple.cpp  tuple_pipeline.cpp  update.cpp  update_full.cpp  update_full_fail.cpp
tests/compute_at/: inline.cpp
tests/experiment/: auto_viz.cpp  bilateral_grid.cpp  blur.cpp  camera_pipe.cpp  conv_layer.cpp  depthwise_separable_conv.cpp  gemm.cpp  helper.h  hist.cpp
tests/fuse/: fuse_par.cpp  fuse_ser.cpp
tests/limitations/: pure_func_no_bounds.cpp  pure_func_no_bounds_xyz.cpp  pure_func_no_bounds_yzx.cpp
tests/padre/: GenerateHalideDiagonal.cc  GenerateHalideDiagonal.cpp  GenerateHalideFull.cpp
tests/parallel/: par_par.cpp  par_seq.cpp  seq_par.cpp
tests/reorder/: reorder.cpp  reorder_par_red.cpp  reorder_par_red_2.cpp  reorder_par_red_3.cpp  reorder_seq_red.cpp
tests/split/: split_exact.cpp  split_shift.cpp
tests/unit/alg/: input_buffer.cpp  input_floats.cpp  pure_func.cpp  reduction.cpp  reduction_bug.cpp  reduction_in_arg.cpp  reduction_multi.cpp  reduction_multi_fail.cpp  reduction_rfactor.cpp  reduction_where.cpp  specialize.cpp  tuple.cpp  tuple_pipeline.cpp  update.cpp  update_full.cpp  update_full_fail.cpp
tests/unit/compute_at/: compute_half.cpp  compute_inline.cpp  compute_root.cpp  compute_update.cpp
tests/unit/compute_with/: compute_with_half.cpp  compute_with_inline.cpp  compute_with_reduction.cpp
tests/unit/fuse/: fuse_par.cpp  fuse_ser.cpp
tests/unit/limitations/: pure_func_no_bounds.cpp  pure_func_no_bounds_xyz.cpp  pure_func_no_bounds_yzx.cpp
tests/unit/parallel/: par_par.cpp  par_red.cpp  par_seq.cpp  seq_par.cpp
tests/unit/reorder/: reorder.cpp  reorder_par_red.cpp  reorder_par_red_2.cpp  reorder_par_red_3.cpp  reorder_par_ser.cpp  reorder_seq_par.cpp  reorder_seq_red.cpp
tests/unit/split/: split_exact.cpp  split_if.cpp  split_round.cpp  split_shift.cpp
tests/unit/store_at/: store_half.cpp  store_root.cpp  store_update.cpp
tests/unit/unroll/: unroll_outer.cpp  unroll_par.cpp  unroll_red.cpp  unroll_ser.cpp
tests/unroll/: unroll_par.cpp  unroll_red.cpp
